# sashiko

./: .gitignore  .yamllint  AUTHORS  CODE_OF_CONDUCT.md  Cargo.toml  DESIGN_LLM_REVIEW_STRATEGY.md  GEMINI.md  Justfile  README.md  SECURITY.md  Settings.toml  TODO.md  email_policy.toml
.github/workflows/: push-main.yml  tag-release.yml
benchmarks/: benchmark.json  benchmark_small.json  benchmark_tiny.json
designs/: DESIGN.md  DESIGN_MULTI_PROVIDER_AI.md  DESIGN_REGRESSION_TESTING_MULTI_PROVIDER.md  ai_error_handling.md
sashiko.dev/: email_policy.toml
sashiko.dev/app/: kustomization.yaml
sashiko.dev/base/app/: kustomization.yaml  management-tools.yaml  sashiko-k8s.yaml
sashiko.dev/base/routing/: kustomization.yaml  maintenance-on.yaml  maintenance-setup.yaml  sashiko-backend-config.yaml  sashiko-ingress.yaml  sashiko-service-skeleton.yaml  sashiko-service.yaml
sashiko.dev/maintenance/: instant-maintenance.yaml  kustomization.yaml
sashiko.dev/production/: kustomization.yaml.example
sashiko.dev/routing/: kustomization.yaml
scripts/: docker-entrypoint.sh
src/: ai.rs  api.rs  baseline.rs  db.rs  email_policy.rs  email_router.rs  fetcher.rs  git_ops.rs  ingestor.rs  lib.rs  main.rs  patch.rs  reviewer.rs  schema.sql  settings.rs  utils.rs
src/agent/: integration_test.rs  mod.rs  tools.rs
src/ai/: bedrock.rs  cache.rs  claude.rs  claude_cli.rs  gemini.rs  mod.rs  openai.rs  proxy.rs  quota.rs  token_budget.rs  truncator.rs  vertex.rs
src/worker/: integration_test.rs  mod.rs  prefetch.rs  prompts.rs
static/: details.html  index.html  message.html
tests/: cover_letter_late_merge_test.rs  merge_bug_prefixes.rs  singleton_cover_merge_test.rs  singleton_root_overwrite.rs
